feat: Implementación Inicial
https://github.com/udistrital/argo_documentacion/issues/317
